[DDW-172] Fix missing checkmark icon

--- a/source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.scss
@@ -304,6 +304,16 @@
               top: 3px;
             }
           }
+
+          .walletsStatusIconCheckmark {
+            position: relative;
+            top: -5px;
+
+            svg {
+              height: 16px;
+              width: 16px;
+            }
+          }
         }
       }
     }
