[DDW-161] - Fix theming issues on the wallet import overlays - fixing checkbox

--- a/source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.scss
@@ -301,17 +301,21 @@
               width: 23px;
             }
 
-            .SimpleCheckbox_checked {
+            .SimpleCheckbox_check.SimpleCheckbox_checked {
               background-color: var(
-                --theme-wallet-import-checkbox-check-bg-color
+                  --theme-wallet-import-checkbox-check-bg-color
               );
-              border-color: var(--theme-wallet-import-checkbox-border-color);
+            }
+
+            .SimpleCheckbox_checked {
+              border-color: var(
+                --theme-wallet-import-checkbox-border-color);
               position: relative;
               top: -2.5px;
 
               &:after {
                 border-color: var(
-                  --theme-wallet-import-background-color
+                    --theme-wallet-import-background-color
                 ) !important;
               }
             }
