[DDW-161] - Fix theming issues on the wallet import overlays - fixing border color

--- a/source/renderer/app/components/widgets/forms/InlineEditingSmallInput.scss
+++ b/source/renderer/app/components/widgets/forms/InlineEditingSmallInput.scss
@@ -34,7 +34,7 @@
     background-color: var(
       --theme-wallet-import-input-background-color-disabled
     );
-    border-color: var(--theme-wallet-import-input-background-color-disabled);
+    border-color: transparent;
     cursor: text !important;
     padding-right: 0;
     pointer-events: none;
