[DDW-161] - Fix theming issues on the wallet import overlays - error colors

--- a/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
@@ -165,7 +165,7 @@
 
           &.error {
             input {
-              border: solid 1px var(--theme-color-error);
+              border: solid 1px var(--theme-wallet-import-error-color);
             }
           }
         }
