[DDW-161] - Fix theming issues on the wallet import overlays - error colors

--- a/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
@@ -173,6 +173,7 @@
 
       .noWalletError {
         @include error-message;
+        color: var(--theme-wallet-import-error-color) !important;
         max-width: 602px;
         padding-top: 20px;
         text-align: center;
