--- a/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
@@ -161,6 +161,7 @@
             font-size: 16px;
             line-height: 1.38;
             padding-right: 48px;
+            user-select: text;
           }
 
           &.error {
