--- a/source/renderer/app/components/wallet/receive/WalletReceiveRandom.scss
+++ b/source/renderer/app/components/wallet/receive/WalletReceiveRandom.scss
@@ -39,7 +39,10 @@
   .qrCode {
     align-items: flex-start;
     display: flex;
+    height: 160px;
     margin-right: 20px;
+    min-width: 160px;
+    width: 160px;
 
     canvas {
       border: 4px solid var(--theme-receive-qr-code-background-color);
