[DDW-161] - Fix theming issues on the wallet import overlays - radio group/button coloring

--- a/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
@@ -127,6 +127,7 @@
 
         .SimpleRadio_label {
           color: var(--theme-wallet-import-description-color);
+          font-family: var(--font-regular);
         }
 
         .SimpleRadio_circle {
