[DDW-161] - Fix theming issues on the wallet import overlays - error focus

--- a/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
@@ -138,7 +138,9 @@
           background-color: var(--theme-wallet-import-checkbox-check-bg-color);
 
           &:after {
-            background-color: var(--theme-wallet-import-background-color) !important;
+            background-color: var(
+              --theme-wallet-import-background-color
+            ) !important;
           }
         }
       }
