[DDW-161] - Fix theming issues on the wallet import overlays - border colors for checkboxes

--- a/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
@@ -217,6 +217,10 @@
           :global {
             .LoadingSpinner_component {
               margin-top: 9px;
+
+              .icon svg path {
+                fill: var(--theme-wallet-import-button-text-color) !important;
+              }
             }
           }
 
