[DW-33] Separates local wallet data handling from Rec. Phrs. Verification feature

--- a/source/renderer/app/components/sidebar/wallets/SidebarWalletMenuItem.scss
+++ b/source/renderer/app/components/sidebar/wallets/SidebarWalletMenuItem.scss
@@ -85,7 +85,7 @@
   opacity: 0.7;
 }
 
-.recoveryPhraseVerificationStatus-notification {
+.notification {
   &:after {
     background: var(--theme-button-attention-background-color);
     border-radius: 50%;
