[DDW-176] Improve 'Delegate' wizard delegation fee calculation logic

--- a/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsChooseStakePoolDialog.scss
+++ b/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsChooseStakePoolDialog.scss
@@ -1,3 +1,5 @@
+@import '../../../themes/mixins/loading-spinner';
+
 .delegationStepsChooseStakePoolDialogWrapper {
   :global {
     .StakePoolThumbnail_content {
@@ -120,5 +122,10 @@
         margin-bottom: 10px;
       }
     }
+  }
+
+  .submitButtonSpinning {
+    box-shadow: none !important;
+    @include loading-spinner('../../../assets/images/spinner-light.svg');
   }
 }
