[DDW-177] Fixed Daedalus logo animation display on macOS

--- a/source/renderer/app/components/loading/syncing-connecting/LogosDisplay.scss
+++ b/source/renderer/app/components/loading/syncing-connecting/LogosDisplay.scss
@@ -71,3 +71,11 @@ $adaLogoWidth: 43px;
     }
   }
 }
+
+.component,
+.connectingLogo,
+.syncingLogo,
+.daedalusLogo,
+.daedalusLogo > div {
+  --webkit-backface-visibility: hidden;
+}
