--- a/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
+++ b/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
@@ -57,4 +57,44 @@
   .statusNotification {
     background-color: var(--theme-recovery-phrase-attention-background-color);
   }
+
+  .paperWallet {
+    background-color: var(
+      --theme-recovery-phrase-paper-wallet-background-color
+    );
+    border-radius: 13px;
+    color: var(--theme-recovery-phrase-paper-wallet-text-color);
+    display: inline-block;
+    font-size: 16px;
+    height: 26px;
+    margin-left: 5px;
+    padding: 2px 26px 2px 10px;
+
+    &:after {
+      background-color: var(
+        --theme-recovery-phrase-paper-wallet-question-background-color
+      );
+      border-radius: 50%;
+      color: black;
+      color: var(--theme-recovery-phrase-paper-wallet-question-text-color);
+      content: '?';
+      display: inline-block;
+      font-family: var(--font-bold);
+      font-size: 12px;
+      height: 14px;
+      margin-left: 2px;
+      position: absolute;
+      right: 8px;
+      text-align: center;
+      top: 6px;
+      width: 14px;
+    }
+
+    :global {
+      .SimpleBubble_bubble {
+        white-space: normal;
+        width: 344px;
+      }
+    }
+  }
 }
