--- a/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
+++ b/source/renderer/app/components/wallet/settings/WalletRecoveryPhraseVerificationWidget.scss
@@ -65,10 +65,11 @@
     border-radius: 13px;
     color: var(--theme-recovery-phrase-paper-wallet-text-color);
     display: inline-block;
-    font-size: 16px;
-    height: 26px;
-    margin-left: 5px;
-    padding: 2px 26px 2px 10px;
+    font-family: var(--font-medium);
+    font-size: 14px;
+    height: 22px;
+    line-height: 22px;
+    padding: 0 24px 0 8px;
 
     &:after {
       background-color: var(
@@ -82,11 +83,12 @@
       font-family: var(--font-bold);
       font-size: 12px;
       height: 14px;
+      line-height: 14px;
       margin-left: 2px;
       position: absolute;
-      right: 8px;
+      right: 6px;
       text-align: center;
-      top: 6px;
+      top: 4px;
       width: 14px;
     }
 
