--- a/source/renderer/app/components/navigation/NavDropdown.scss
+++ b/source/renderer/app/components/navigation/NavDropdown.scss
@@ -7,6 +7,20 @@
     width: 100%;
   }
 
+  .optionLabel {
+    &.hasNotification {
+      &:before {
+        background: var(--theme-button-attention-background-color);
+        border-radius: 50%;
+        content: '';
+        display: inline-block;
+        height: 8px;
+        margin-right: 8px;
+        width: 8px;
+      }
+    }
+  }
+
   &.hasNotification {
     :global {
       .SimpleOptions_option:first-child span {
