[DDW-174] - Improve wallet import dialogs - adding changes on dialog containers and modals - fixing flow errors

--- a/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-import/WalletImportFileDialog.scss
@@ -7,6 +7,17 @@
   &:focus {
     outline: none;
   }
+
+  > div {
+    &::-webkit-scrollbar-thumb {
+      background-color: var(--theme-splash-network-scrollbar-thumb-background);
+      &:hover {
+        background-color: var(
+            --theme-splash-network-scrollbar-thumb-background-hover
+        );
+      }
+    }
+  }
 }
 
 .component {
