[DDW-174] - Improve wallet import dialogs - adding changes on dialog containers and modals - fixing flow errors

--- a/source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.scss
@@ -217,10 +217,12 @@
       width: 698px;
 
       &::-webkit-scrollbar-thumb {
-        background-color: var(--theme-splash-network-scrollbar-thumb-background);
+        background-color: var(
+          --theme-splash-network-scrollbar-thumb-background
+        );
         &:hover {
           background-color: var(
-              --theme-splash-network-scrollbar-thumb-background-hover
+            --theme-splash-network-scrollbar-thumb-background-hover
           );
         }
       }
