--- a/source/renderer/app/components/widgets/DialogOverride.scss
+++ b/source/renderer/app/components/widgets/DialogOverride.scss
@@ -6,6 +6,7 @@
     border: none !important;
     box-shadow: none !important;
     height: 100% !important;
+    max-width: 740px !important;
     width: 100% !important;
   }
 }
