[DDW-174] - Improve wallet import dialogs - adding changes on dialog containers and modals - fixing errors

--- a/source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-import/WalletSelectImportDialog.scss
@@ -18,7 +18,7 @@
 
       &:hover {
         background-color: var(
-            --theme-splash-network-scrollbar-thumb-background-hover
+          --theme-splash-network-scrollbar-thumb-background-hover
         );
       }
     }
@@ -58,7 +58,7 @@
 
       &:hover {
         background-color: var(
-            --theme-wallet-import-description-close-hover-background
+          --theme-wallet-import-description-close-hover-background
         );
         border-radius: 50%;
       }
@@ -154,8 +154,9 @@
         }
 
         .SimpleBubble_root.SimpleBubble_transparent.SimpleBubble_openUpward
-        [data-bubble-arrow]:after {
-          border-color: var(--theme-utxo-tooltip-background-color) transparent transparent transparent !important;
+          [data-bubble-arrow]:after {
+          border-color: var(--theme-utxo-tooltip-background-color) transparent
+            transparent transparent !important;
         }
       }
     }
@@ -252,13 +253,13 @@
             button {
               &:hover {
                 background-color: var(
-                    --theme-button-flat-background-color-hover
+                  --theme-button-flat-background-color-hover
                 );
               }
 
               &:active {
                 background-color: var(
-                    --theme-button-flat-background-color-active
+                  --theme-button-flat-background-color-active
                 );
               }
             }
@@ -292,7 +293,7 @@
 
             .SimpleCheckbox_check.SimpleCheckbox_checked {
               background-color: var(
-                  --theme-wallet-import-checkbox-check-bg-color
+                --theme-wallet-import-checkbox-check-bg-color
               );
             }
 
@@ -301,7 +302,7 @@
 
               &:after {
                 border-color: var(
-                    --theme-wallet-import-checkbox-check-color
+                  --theme-wallet-import-checkbox-check-color
                 ) !important;
                 margin-top: -3px;
               }
@@ -361,7 +362,7 @@
 
           &:hover {
             background-color: var(
-                --theme-wallet-import-button-background-color
+              --theme-wallet-import-button-background-color
             );
             border: solid 1px var(--theme-wallet-import-button-border-color);
             color: var(--theme-wallet-import-button-text-color);
